--- a/thesis/main.lyx
+++ b/thesis/main.lyx
@@ -619,7 +619,7 @@ filename "Conception.lyx"
 \end_layout
 
 \begin_layout Part
-Implementation & Tests
+Implementation
 \end_layout
 
 \begin_layout Standard
